2016-08-03  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/loadpre2.c: Disable LIM.
	* gcc.dg/tree-ssa/loadpre21.c: Likewise.
	* gcc.dg/tree-ssa/loadpre22.c: Likewise.
	* gcc.dg/tree-ssa/ssa-pre-23.c: Likewise.

2016-08-03  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* gcc.dg/init-excess-2.c: Require int32plus.
	* gcc.dg/pr44024.c: Skip if target keeps null pointer checks.
	* gcc.dg/pr59963-2.c: Require int32plus.
	* gcc.dg/pr71084.c: Cast pointer to intprt_t.
	* gcc.dg/unroll-7.c: Require int32plus.

2016-08-02  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/34114
	* gcc.dg/tree-ssa/loop-42.c: New test.

2016-08-02  Tamar Christina  <tamar.christina@arm.com>

	* gcc.target/aarch64/vminmaxnm.c: New.
	* gcc.target/aarch64/simd/vminmaxnm_1.c (main): Add float64x1_t
	tests.

2016-08-01  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/vec-extract-5.c: New tests to test
	vec_extract for vector float, vector int, vector short, and vector
	char.
	* gcc.target/powerpc/vec-extract-6.c: Likewise.
	* gcc.target/powerpc/vec-extract-7.c: Likewise.
	* gcc.target/powerpc/vec-extract-8.c: Likewise.
	* gcc.target/powerpc/vec-extract-9.c: Likewise.

2016-08-01  Wilco Dijkstra  <wdijkstr@arm.com>

	* gcc.target/aarch64/test_frame_10.c: Fix test to check for a
	single stack adjustment, no writeback.
	* gcc.target/aarch64/test_frame_12.c: Likewise.
	* gcc.target/aarch64/test_frame_13.c: Likewise.
	* gcc.target/aarch64/test_frame_15.c: Likewise.
	* gcc.target/aarch64/test_frame_6.c: Likewise.
	* gcc.target/aarch64/test_frame_7.c: Likewise.
	* gcc.target/aarch64/test_frame_8.c: Likewise.
	* gcc.target/aarch64/test_frame_16.c: New test.

2015-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/72748
	* gcc.target/i386/pr72748.c: New test.

2015-08-01  Alan Hayward <alan.hayward@arm.com>

	PR tree-optimization/71818
	* gcc.dg/vect/pr71818.c: New

2016-08-01  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/71857